[gd_scene load_steps=7 format=3 uid="uid://fdiowj4ni6kg"]

[ext_resource type="Script" path="res://Scripts/new_game_map/event/well_event.gd" id="1_hgck0"]
[ext_resource type="Theme" uid="uid://liuy3as2gehs" path="res://Fonts/Themes/bigger_dice_game_ui.tres" id="1_k7cl6"]
[ext_resource type="Texture2D" uid="uid://ba5fohkagawd8" path="res://Sprites/dice_game_ui/close X.png" id="2_kflqk"]
[ext_resource type="Texture2D" uid="uid://c630wkr6swsyd" path="res://Sprites/event/well.png" id="3_8vimh"]
[ext_resource type="Theme" uid="uid://g7xlk0plmj00" path="res://Fonts/Themes/dice_game_ui.tres" id="4_7g8wl"]
[ext_resource type="Texture2D" uid="uid://cge74qu1scst6" path="res://Sprites/dice_game_ui/submit.png" id="4_qyyoy"]

[node name="well_event" type="Node2D"]
script = ExtResource("1_hgck0")

[node name="game Visuals TEMP2" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -5.0
offset_right = 1158.0
offset_bottom = 647.0
color = Color(1, 0.658824, 0.658824, 1)

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 201.0
offset_top = 10.0
offset_right = 947.0
offset_bottom = 80.0
theme = ExtResource("1_k7cl6")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]wishing well"

[node name="player_ui" type="Node2D" parent="."]

[node name="close" type="TextureButton" parent="player_ui"]
offset_left = 1093.0
offset_top = 7.0
offset_right = 1315.0
offset_bottom = 234.0
scale = Vector2(0.23, 0.23)
focus_mode = 0
texture_normal = ExtResource("2_kflqk")

[node name="submit" type="TextureButton" parent="player_ui"]
offset_left = 1062.0
offset_top = 459.0
offset_right = 1105.0
offset_bottom = 502.0
scale = Vector2(1.3, 1.3)
focus_mode = 0
texture_normal = ExtResource("4_qyyoy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(200, 338)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_8vimh")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 391.0
offset_top = 107.0
offset_right = 1130.0
offset_bottom = 294.0
theme = ExtResource("4_7g8wl")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "The Wishing Well stands as a timeless beacon of hope, its enchanted waters whispering secrets of dreams yet to come."

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 399.0
offset_top = 461.0
offset_right = 1048.0
offset_bottom = 519.0
theme = ExtResource("4_7g8wl")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
placeholder_text = "make a wish?  (1 gold)"

[connection signal="button_down" from="player_ui/close" to="." method="_on_close_button_down"]
[connection signal="button_down" from="player_ui/submit" to="." method="_on_submit_button_down"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_text_edit_text_changed"]
